ARPA-429: Fix broken inputs

--- a/src/app/shared/form-field/form-field.component.scss
+++ b/src/app/shared/form-field/form-field.component.scss
@@ -14,7 +14,3 @@
 .p-field-checkbox {
   margin-top: 2rem;
 }
-
-.p-float-label + .error {
-  margin-top: -.5rem;
-}
